		   CHANGES IN formatR VERSION 0.11

MINOR CHANGES

  o the usage() function returns the source code of the usage of a function
  now; in previous versions, it only returns NULL

  o tidy.source() may not work for R 3.0.0 or 3.0.1 if the code only
  contains comments due to a bug in base R, which has been fixed; if you use
  R 3.0, please upgrade to at least R 3.0.2 (R 2.15.x is not affected)

		   CHANGES IN formatR VERSION 0.10

MINOR CHANGES

  o the argument 'replace.assign' in tidy.source() will be treated as FALSE
  if there is no = in the code, because there is no need to replace = in
  such cases (this slighly improves the performance)

  o the PDF vignette was removed, and only the Markdown vignette was kept in
  this package, which uses the vignette engine knitr::docco_linear; see
  vignette('formatR', package = 'formatR')

		   CHANGES IN formatR VERSION 0.9

MAJOR CHANGES

  o tidy.source() uses utils::getParseData() to identify comments in R code
  under R 3.0.x, which is much more accurate than the regular expressions in
  previous versions; users are strongly recommended to try R 3.0.x (#25, #26)

  o changed the meaning of the argument 'width' in usage(); see documentation

		   CHANGES IN formatR VERSION 0.8

MAJOR CHANGES

  o tidy.source(text = character(0)) returns character(0) instead of ''

  o removed the (dark voodoo) functions parse.tidy() and deparse.tidy() as
  well as the operator "%InLiNe_IdEnTiFiEr%"; they were designed for the
  pgfSweave package, which has been archived on CRAN for a long time

  o the function unmask.source() is no longer exported

		   CHANGES IN formatR VERSION 0.7

BUG FIXES

  o backslashes in whole lines of comments can be correctly retained
  now (e.g. #' \code{1+1}) (thanks, KAPLAN Bernard)

  o the font button in tidy.gui() works again (#23) (thanks, Dason
  Kurkiewicz)

  o the option left.brace.newline was buggy; it did not work for empty
  lines

MAJOR CHANGES
